@@ -55,6 +55,8 @@ Trunk (unreleased changes)
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-438 HCatFieldSchema class does not have equals() method implementation (avandana)
+
   HCAT_416 MultiOutputFormat should handle merging of DistributedCache configurations (rohini via avandana)
 
   HCAT-423 HCatalog should include SerDe-reported fields in the table schema (traviscrawford via khorgath)
